backend/src/api/api.hpp

    
    typedef struct LeHandle LeHandle;
    typedef struct LePixelBuffer
    {
        const uint8_t *data;
        int32_t width;
        int32_t height;
        int64_t row_bytes;
    } LePixelBuffer;
    typedef struct LeSnappedMousePosition
    {
        double x_um;
        double y_um;
        int32_t has_position;
    } LeSnappedMousePosition;
    int32_t le_message_count(LeHandle *handle);
    const char *le_message_at(LeHandle *handle, int32_t index);
    void le_set_layer_name_visible(LeHandle *handle, const char *layer_name, int32_t visible);
    void le_zoom(LeHandle *handle, double factor, int32_t x, int32_t y);
    void le_pan(LeHandle *handle, double x_factor, double y_factor);
    void le_fit_scene(LeHandle *handle, int32_t padding_px);
    int64_t le_minor_grid_spacing(LeHandle *handle);
    void le_set_minor_grid_spacing(LeHandle *handle, int64_t dbu);
    int64_t le_major_grid_spacing(LeHandle *handle);
    void le_set_major_grid_spacing(LeHandle *handle, int64_t dbu);
    void le_set_mouse_position(LeHandle *handle, int32_t x, int32_t y);
    void le_clear_mouse_position(LeHandle *handle);
    LeSnappedMousePosition le_snapped_mouse_position(LeHandle *handle);
    enum LeKeyCode
    {
        LE_KEY_SHIFT = 1,
        LE_KEY_ZOOM = 2,
        LE_KEY_FIT = 3,
        LE_KEY_PAN_LEFT = 4,
        LE_KEY_PAN_RIGHT = 5,
        LE_KEY_PAN_UP = 6,
        LE_KEY_PAN_DOWN = 7,
        LE_KEY_CTRL = 8,
        LE_KEY_SELECT_ALL = 9,
        LE_KEY_1 = 10,
        LE_KEY_2 = 11,
        LE_KEY_3 = 12,
        LE_KEY_4 = 13,
        LE_KEY_5 = 14,
        LE_KEY_6 = 15,
        LE_KEY_7 = 16,
        LE_KEY_8 = 17,
        LE_KEY_9 = 18,
        LE_KEY_DESELECT_ALL = 19,
        LE_KEY_0 = 20,
        LE_KEY_SELECT_MODE = 21,
        LE_KEY_EDIT_MODE = 22,
    };
    void le_key_down(LeHandle *handle, int32_t key_code);
    void le_key_up(LeHandle *handle, int32_t key_code);
    int32_t le_is_key_held(LeHandle *handle, int32_t key_code);
    void le_clear_all_keys(LeHandle *handle);
    void le_mouse_up(LeHandle *handle, int32_t x, int32_t y);
    LePixelBuffer le_render_pixel_buffer(LeHandle *handle);