flutter_plugin/lib/lef_editor_plugin_bindings_generated.dart


  /// @brief Spacing (dbu) between minor grid dots, drawn behind the
  /// design by le_render_pixel_buffer() - see Renderer::draw_grid.
  /// Mirrors Scene::minor_grid_spacing directly. Defaults to 5 (dbu),
  /// matching a 5nm minor grid under the common "1 dbu = 1nm" Technology
  /// convention. Returns 0 if handle is null.
  int le_minor_grid_spacing(ffi.Pointer<LeHandle> handle) {
    return _le_minor_grid_spacing(handle);
  }

  late final _le_minor_grid_spacingPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<LeHandle>)>>(
        'le_minor_grid_spacing',
      );
  late final _le_minor_grid_spacing = _le_minor_grid_spacingPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>)>();

  /// @brief Set the minor grid dot spacing (dbu). Mirrors
  /// Scene::set_minor_grid_spacing directly (affects rendering) - values
  /// <= 0 are ignored, same guard as le_set_scale. A no-op if handle is
  /// null.
  void le_set_minor_grid_spacing(ffi.Pointer<LeHandle> handle, int dbu) {
    return _le_set_minor_grid_spacing(handle, dbu);
  }

  late final _le_set_minor_grid_spacingPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int64)>
      >('le_set_minor_grid_spacing');
  late final _le_set_minor_grid_spacing = _le_set_minor_grid_spacingPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Spacing (dbu) between major grid dots (drawn bolder than
  /// minor ones - see Renderer::draw_grid). Mirrors
  /// Scene::major_grid_spacing directly. Defaults to 50 (dbu), matching
  /// a 50nm major grid under the common "1 dbu = 1nm" Technology
  /// convention. Returns 0 if handle is null.
  int le_major_grid_spacing(ffi.Pointer<LeHandle> handle) {
    return _le_major_grid_spacing(handle);
  }

  late final _le_major_grid_spacingPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<LeHandle>)>>(
        'le_major_grid_spacing',
      );
  late final _le_major_grid_spacing = _le_major_grid_spacingPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>)>();

  /// @brief Set the major grid dot spacing (dbu). Mirrors
  /// Scene::set_major_grid_spacing directly (affects rendering) - values
  /// <= 0 are ignored. A no-op if handle is null.
  void le_set_major_grid_spacing(ffi.Pointer<LeHandle> handle, int dbu) {
    return _le_set_major_grid_spacing(handle, dbu);
  }

  late final _le_set_major_grid_spacingPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int64)>
      >('le_set_major_grid_spacing');
  late final _le_set_major_grid_spacing = _le_set_major_grid_spacingPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Set the current mouse position, in the same pixel space as
  /// le_render_pixel_buffer()'s output image (top-left origin, y
  /// increasing downward) and le_zoom()'s x/y - meant to be fed straight
  /// from a pointer-move event. Drives the grid-snap indicator box drawn
  /// by le_render_pixel_buffer() (see Renderer::draw_cursor), and
  /// updates which selectable shape (if any) is hovered (UPDATES.md
  /// 7.1 item 1 - Renderer::draw_hover_outline draws its yellow
  /// outline) via a hit-test against the shapes currently on screen. A
  /// no-op if handle is null. Never invalidates the (potentially
  /// design-sized) rasterized design cache - only the small overlay
  /// picture, see Renderer::compose_with_overlays - but unlike before
  /// hover was added, this is no longer O(1): the hit-test is bounded
  /// by the number of shapes currently visible (already viewport-culled
  /// by Pipeline), not the whole design. See BENCHMARKS.md for measured
  /// cost on a 1M-shape design.
  void le_set_mouse_position(ffi.Pointer<LeHandle> handle, int x, int y) {
    return _le_set_mouse_position(handle, x, y);
  }

  late final _le_set_mouse_positionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int32, ffi.Int32)
        >
      >('le_set_mouse_position');
  late final _le_set_mouse_position = _le_set_mouse_positionPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int, int)>();

  /// @brief Clear the current mouse position (e.g. on a pointer-leave
  /// event) so the grid-snap indicator box and any hover outline stop
  /// showing at/for the last known position. A no-op if handle is null.
  void le_clear_mouse_position(ffi.Pointer<LeHandle> handle) {
    return _le_clear_mouse_position(handle);
  }

  late final _le_clear_mouse_positionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LeHandle>)>>(
        'le_clear_mouse_position',
      );
  late final _le_clear_mouse_position = _le_clear_mouse_positionPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>)>();

  /// @brief The current mouse position's coordinates in microns, snapped
  /// to the minor grid (UPDATES.md 5.3) - the same point the grid-snap
  /// indicator box drawn by le_render_pixel_buffer() is centered on (see
  /// Renderer::draw_cursor), for a Flutter UI to display as coordinate
  /// text. See LeSnappedMousePosition's own comment for the dbu-to-micron
  /// conversion and its degrade-gracefully cases (null handle, no mouse
  /// position set, no Technology read yet).
  LeSnappedMousePosition le_snapped_mouse_position(
    ffi.Pointer<LeHandle> handle,
  ) {
    return _le_snapped_mouse_position(handle);
  }

  late final _le_snapped_mouse_positionPtr =
      _lookup<
        ffi.NativeFunction<
          LeSnappedMousePosition Function(ffi.Pointer<LeHandle>)
        >
      >('le_snapped_mouse_position');
  late final _le_snapped_mouse_position = _le_snapped_mouse_positionPtr
      .asFunction<LeSnappedMousePosition Function(ffi.Pointer<LeHandle>)>();

  /// @brief Mark `key_code` (an LeKeyCode value) as currently held,
  /// e.g. on a key-down *or* key-repeat event - queried internally by
  /// commands that care (e.g. le_mouse_up's shift-click/shift-drag
  /// behavior). For the canvas-navigation codes (LE_KEY_ZOOM/
  /// LE_KEY_FIT/LE_KEY_PAN_*), also triggers that action immediately,
  /// once per call - so a held key that keeps re-delivering key-repeat
  /// events (e.g. an arrow key auto-repeating) keeps panning/zooming
  /// once per repeat, matching a real keyboard's own repeat behavior,
  /// not a one-shot trigger on first press only:
  ///
  /// - LE_KEY_ZOOM: le_zoom() by a fixed factor, anchored at the
  /// current mouse position (Scene::mouse_x_px/mouse_y_px - i.e.
  /// wherever le_set_mouse_position was last called for); zooms in,
  /// or out if LE_KEY_SHIFT is currently held (le_is_key_held).
  /// - LE_KEY_FIT: le_fit_scene() with a fixed padding - or, if
  /// LE_KEY_CTRL is currently held (UPDATES.md 9.6, "Ctrl-F fit
  /// selected"), fits the viewport to the current selection's own
  /// combined bbox instead (same fixed padding; piece-scoped for any
  /// selection entry with a piece set, same scoping
  /// build_selected_object_properties's own bbox_um property uses -
  /// see api.cpp), leaving the view unchanged if nothing is selected
  /// rather than falling back to the whole-content fit.
  /// - LE_KEY_PAN_LEFT/RIGHT/UP/DOWN: le_pan() by a fixed
  /// viewport-fraction step in the corresponding direction.
  /// - LE_KEY_SELECT_ALL (UPDATES.md 9.1): only while LE_KEY_CTRL is
  /// currently held - clears the current selection, then selects
  /// every currently selectable shape in the current Abstract
  /// regardless of viewport (not just what's on screen), up to a
  /// fixed cap of 10,000 objects. If the design has more selectable
  /// shapes than that, the selection stops at the cap and a
  /// "WARNING: Selection capped..." entry is appended to the
  /// le_message_count()/le_message_at() queue (UPDATES.md item 3) -
  /// there's no separate "was it capped" return value, this is the
  /// same mechanism any other backend-originated message uses.
  /// - LE_KEY_1..LE_KEY_9 (UPDATES.md 9.4/9.7): toggles a ROUTING
  /// layer's visibility - the 1st..9th if LE_KEY_CTRL is not
  /// currently held, the 11th..19th if it is (a no-op if there's no
  /// ROUTING layer at that position) - then, either way, - only via
  /// this keyboard path, never from a direct
  /// le_set_layer_name_visible() call - re-checks every pair of
  /// adjacent ROUTING layers: if both are now visible, every CUT
  /// layer between them (LEF has no distinct "VIA" layer type - vias
  /// are TYPE CUT layers - see this header's own LeKeyCode comment)
  /// becomes visible too; if not, those CUT layers become invisible.
  /// - LE_KEY_0 (UPDATES.md 9.7): toggles the 10th ROUTING layer's
  /// visibility, unconditional on LE_KEY_CTRL - same VIA-pairing
  /// re-check as LE_KEY_1..LE_KEY_9 above.
  /// - LE_KEY_DESELECT_ALL (UPDATES.md 9.5): only while LE_KEY_CTRL is
  /// currently held - clears the current selection. A no-op (not an
  /// error) if the selection was already empty.
  ///
  /// A no-op if handle is null.
  void le_key_down(ffi.Pointer<LeHandle> handle, int key_code) {
    return _le_key_down(handle, key_code);
  }

  late final _le_key_downPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int32)>
      >('le_key_down');
  late final _le_key_down = _le_key_downPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Mark `key_code` as no longer held, e.g. on a key-up event.
  /// A no-op if handle is null.
  void le_key_up(ffi.Pointer<LeHandle> handle, int key_code) {
    return _le_key_up(handle, key_code);
  }

  late final _le_key_upPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int32)>
      >('le_key_up');
  late final _le_key_up = _le_key_upPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief True (nonzero) if `key_code` is currently held (see
  /// le_key_down). Returns 0 if handle is null.
  int le_is_key_held(ffi.Pointer<LeHandle> handle, int key_code) {
    return _le_is_key_held(handle, key_code);
  }

  late final _le_is_key_heldPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>, ffi.Int32)>
      >('le_is_key_held');
  late final _le_is_key_held = _le_is_key_heldPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Clear every currently-held key at once - call when the
  /// widget/window receiving key events loses focus (e.g. a Flutter
  /// `Focus` widget's `onFocusChange(false)`). A key's matching
  /// key-up event is not guaranteed to still reach a widget that no
  /// longer has focus by the time the physical key is released, so
  /// without calling this on a focus loss, a modifier (e.g. shift)
  /// held at that moment stays "held" from this API's point of view
  /// indefinitely - silently changing the behavior of every later
  /// gesture that consults it (le_mouse_up's shift-click/shift-drag
  /// decision) until that same key happens to be pressed and released
  /// again while focused. A no-op if handle is null.
  void le_clear_all_keys(ffi.Pointer<LeHandle> handle) {
    return _le_clear_all_keys(handle);
  }

  late final _le_clear_all_keysPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LeHandle>)>>(
        'le_clear_all_keys',
      );
  late final _le_clear_all_keys = _le_clear_all_keysPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>)>();
